Toutes les figures de la section 1.6 finies

--- a/avant_propos.tex
+++ b/avant_propos.tex
@@ -32,7 +32,7 @@ Je suis enfin reconnaissant envers Graham O’Connor pour sa relecture attentive
 Finalement, j’aimerais dédier ce livre à mes amis et collègues de la communauté mondiale des physiciens de la fusion.
 Ils ont donné un remarquable exemple de collaboration internationale à suivre.
 \vfill
-\noindent Angleterre \hfill JOHN WESSON\\July 2003
+\noindent Angleterre \hfill JOHN WESSON\\Juillet 2003
 
 \chapter*{Contribution des auteurs}
 
